--- a/home/index.html
+++ b/home/index.html
@@ -9,7 +9,7 @@
         <div id="smooth-wrapper">
             <div id="smooth-content">
                 <div id="main_wrapper">
-                    <div class="starting">
+                    <div class="starting hidden">
                         <div class="textWarpper">
                             <div>
                                 <div class="left_txt">
@@ -33,10 +33,34 @@
                         </div>
                     </div>
                     <div id="banner">
-
-                        <div class="banner_text">
-                            <h1>Welcome to Our World</h1>
-                            <p>Explore the places we create, where every corner tells a story.</p>
+                        <div class="banner_absolute_txt_1">
+                            <h2>HELLO</h2>
+                            <h2>WORLD</h2>
+                        </div>
+                        <div class="banner_absolute_txt_2">
+                            <h2>HELLO</h2>
+                            <h2>WORLD</h2>
+                        </div>
+                        <div class="banner_wraper">
+                            <video
+                              src="../assets/video001.mp4"
+                              autoplay
+                              muted
+                              loop
+                              playsinline
+                              class="masked-video"
+                              width="800"
+                              height="400"
+                              style="width:100%;height:100%;object-fit:cover;position:absolute;top:0;left:0;z-index:2;"
+                            ></video>
+                            <svg width="250" height="100" style="position:absolute;">
+                              <defs>
+                                <mask id="textMask">
+                                  <rect x="0" y="0" width="800" height="400" fill="black"/>
+                                  <text x="50%" y="50%" text-anchor="middle" dominant-baseline="middle" font-size="100" font-family="Arial, Helvetica, sans-serif" font-weight="bold" fill="white">INCLUDI</text>
+                                </mask>
+                              </defs>
+                            </svg>
                         </div>
                     </div>
                 </div>
@@ -47,6 +71,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <!-- GSAP ScrollTrigger Plugin -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="homeScript.js"></script>
+    <!-- <script src="homeScript.js"></script> -->
 </head>
 </html>
